--- a/Danji/Base.lproj/Main.storyboard
+++ b/Danji/Base.lproj/Main.storyboard
@@ -442,7 +442,7 @@
         <scene sceneID="VXT-tp-fG7">
             <objects>
                 <tableViewController id="qIM-EP-lkZ" customClass="DJHomeViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" indicatorStyle="white" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="DsM-C5-Ijm">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" indicatorStyle="white" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="103" sectionHeaderHeight="22" sectionFooterHeight="22" id="DsM-C5-Ijm">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -458,86 +458,13 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="contentsCell" rowHeight="213" id="6bM-ja-xjJ" customClass="DJContentsViewCell">
-                                <rect key="frame" x="0.0" y="57" width="320" height="213"/>
+                            <tableViewCell contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="contentsCell" rowHeight="103" id="6bM-ja-xjJ" customClass="DJContentsViewCell">
+                                <rect key="frame" x="0.0" y="57" width="320" height="103"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6bM-ja-xjJ" id="KLs-rU-IGt">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="212"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ipA-eC-cJR">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="320" id="k34-37-pZD"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lkS-vo-ebh">
-                                            <rect key="frame" x="8" y="118" width="304" height="31"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="304" id="Sls-Sn-0V1"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zvf-hH-qmm">
-                                            <rect key="frame" x="0.0" y="157" width="28" height="28"/>
-                                            <color key="backgroundColor" red="0.8980392157" green="0.68627450980000004" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="28" id="NMX-Uc-DXM"/>
-                                                <constraint firstAttribute="width" constant="28" id="vfw-ck-mOr"/>
-                                            </constraints>
-                                            <state key="normal" image="like">
-                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                            </state>
-                                            <connections>
-                                                <action selector="likeButtonTapped:" destination="6bM-ja-xjJ" eventType="touchUpInside" id="2FV-dz-NED"/>
-                                            </connections>
-                                        </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ts-0P-0qa">
-                                            <rect key="frame" x="28" y="157" width="47" height="28"/>
-                                            <color key="backgroundColor" red="0.8980392157" green="0.68627450980000004" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="47" id="a7K-Ce-3Jn"/>
-                                                <constraint firstAttribute="height" constant="28" id="dxj-qU-GAr"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACW-ep-F90">
-                                            <rect key="frame" x="76" y="157" width="236" height="28"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="220" id="ieV-AD-vKL"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                            <color key="textColor" red="0.47058823529999999" green="0.36078431370000003" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="8ts-0P-0qa" secondAttribute="bottom" constant="19" id="131-lS-VYI"/>
-                                        <constraint firstItem="lkS-vo-ebh" firstAttribute="leading" secondItem="KLs-rU-IGt" secondAttribute="leadingMargin" id="1p2-iF-eeM"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="lkS-vo-ebh" secondAttribute="bottom" constant="55" id="6PS-jb-JZp"/>
-                                        <constraint firstItem="lkS-vo-ebh" firstAttribute="top" secondItem="ipA-eC-cJR" secondAttribute="bottom" constant="8" id="7hM-hv-9hL"/>
-                                        <constraint firstItem="8ts-0P-0qa" firstAttribute="leading" secondItem="Zvf-hH-qmm" secondAttribute="trailing" id="82N-H3-Pb5"/>
-                                        <constraint firstItem="lkS-vo-ebh" firstAttribute="trailing" secondItem="KLs-rU-IGt" secondAttribute="trailingMargin" id="GtT-r1-xAV"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="ACW-ep-F90" secondAttribute="bottom" constant="19" id="INN-TF-vBI"/>
-                                        <constraint firstItem="Zvf-hH-qmm" firstAttribute="leading" secondItem="KLs-rU-IGt" secondAttribute="leadingMargin" constant="-8" id="Kj0-Gn-Tcf"/>
-                                        <constraint firstItem="ACW-ep-F90" firstAttribute="leading" secondItem="8ts-0P-0qa" secondAttribute="trailing" constant="1" id="frC-NO-1Gf"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Zvf-hH-qmm" secondAttribute="bottom" constant="19" id="kIq-r4-E51"/>
-                                        <constraint firstItem="ipA-eC-cJR" firstAttribute="top" secondItem="KLs-rU-IGt" secondAttribute="topMargin" constant="-8" id="wwV-fy-uny"/>
-                                        <constraint firstItem="ACW-ep-F90" firstAttribute="top" relation="lessThanOrEqual" secondItem="lkS-vo-ebh" secondAttribute="bottom" constant="8" id="x6R-Wx-zYl"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="ACW-ep-F90" secondAttribute="trailing" id="zHF-Bb-5Ph"/>
-                                    </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="mBody" destination="lkS-vo-ebh" id="hpA-QL-XMp"/>
-                                    <outlet property="mImage" destination="ipA-eC-cJR" id="kMJ-un-xwH"/>
-                                    <outlet property="mLikeButton" destination="Zvf-hH-qmm" id="D1T-7f-DaL"/>
-                                    <outlet property="mLikeCount" destination="8ts-0P-0qa" id="Lpc-oa-Riu"/>
-                                    <outlet property="mReference" destination="ACW-ep-F90" id="jyI-qp-ahs"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -674,7 +601,7 @@
                                 </state>
                                 <connections>
                                     <action selector="galleryButtonTapped:" destination="PMn-lw-gKc" eventType="touchUpInside" id="bez-1K-ejO"/>
-                                    <segue destination="RQ0-rN-znk" kind="presentation" identifier="openGallery" modalTransitionStyle="crossDissolve" id="oz6-Br-Sai"/>
+                                    <segue destination="RQ0-rN-znk" kind="show" identifier="openGallery" id="oz6-Br-Sai"/>
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l21-13-rjK">
@@ -923,7 +850,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jXC-cp-IGt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="695"/>
+            <point key="canvasLocation" x="57" y="690"/>
         </scene>
         <!--Dialog Write Controller-->
         <scene sceneID="gE6-Vm-FDc">
@@ -1182,7 +1109,7 @@
         <image name="write.png" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Hbo-bP-cNO"/>
+        <segue reference="S68-OX-NKj"/>
         <segue reference="pUH-sk-lcG"/>
         <segue reference="NTQ-fp-XM9"/>
     </inferredMetricsTieBreakers>
